--- a/Gump_backend/config.yaml
+++ b/Gump_backend/config.yaml
@@ -5,6 +5,9 @@ version: "v.0.0.1"
 start_time: "2021-12-28"
 machine_id: 1
 
+auth:
+  jwt_expire: 10
+
 log:
   level: "debug"
   file_name: "Gump.log"
